--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
-project.Tugas1_IMK=C:\\Users\\User\\Documents\\NetBeansProjects\\PBO_TUGAS_BESAR--master
+project.Tugas1_IMK=C:\\Users\\User\\Downloads\\Compressed\\PBO_TUGAS_BESAR--master
 user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
